# appimage_fixer

./: .bandit  .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
appimage_fixer/: __init__.py  appimaged_integration.py  cli.py  config.py  core.py  database.py  installer.py
docs/: CONTRIBUTING.md  FAQ.md  INSTALLATION.md  PYPI_SETUP.md  RELEASES.md  USAGE.md
scripts/: create_release.sh  install_hooks.sh  pre-push
tests/: test_appimaged_integration.py  test_cli.py  test_core.py  test_database.py
