[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appimage-fixer"
dynamic = ["version"]
description = "Automatic AppImage desktop file manager and fixer"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "akopylov", email = "akopylov@example.com"}
]
maintainers = [
    {name = "akopylov", email = "akopylov@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop", 
    "Topic :: Desktop Environment",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
keywords = ["appimage", "desktop", "linux", "systemd", "automation", "icons"]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0", 
    "black>=22.0",
    "mypy>=0.900",
    "flake8>=4.0",
    "twine>=4.0",
    "build>=0.10",
]

[project.urls]
Homepage = "https://github.com/wolfDiesel/appimage_fixer"
Repository = "https://github.com/wolfDiesel/appimage_fixer.git"
Documentation = "https://github.com/wolfDiesel/appimage_fixer/blob/main/README.md"
"Bug Reports" = "https://github.com/wolfDiesel/appimage_fixer/issues"

[project.scripts]
appimage-fixer = "appimage_fixer.cli:main"

[tool.setuptools.dynamic]
version = {attr = "appimage_fixer.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["appimage_fixer*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
